--- a/common-services.yml
+++ b/common-services.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
     spark-master:
       container_name: master
-      image: t3g7/docker-spark
+      image: logimethods/docker-bigdata:latest
       command: /usr/local/spark/bin/spark-class org.apache.spark.deploy.master.Master -h master
       hostname: master
       environment:
@@ -27,7 +27,7 @@ services:
         - ./data:/usr/local/spark/data
 
     spark-slave:
-      image: t3g7/docker-spark
+      image: logimethods/docker-bigdata:latest
       command: /usr/local/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://master:7077
       environment:
         - "SPARK_CONF_DIR: /conf"
